Major refactor: BookingStatus lifecycle, booking IDs, attendance flow, reports, and bug fixes
BookingStatus & Booking class:
- Add BookingStatus enum (BOOKED, ATTENDED, CANCELLED)
- Convert Booking from record to class to support mutable status
- Add booking IDs with B001 format counter
- cancelBooking() now calls markCancelled() before removing booking

Attendance flow:
- Rename submitReview() to attendLesson() — ties review to lesson attendance
- Only ATTENDED bookings count toward income and attendance reports
- DataSetup.createSeedReviews() updated to use attendLesson()

Reports:
- Extract ReportService as a separate class
- Attendance report uses lesson.getAverageRating() (DRY fix)
- Income report iterates ExerciseType.values() instead of String matching
- Income report uses lesson.getTotalIncome() instead of manual calculation

Bug fixes:
- Fix main() signature to public static void main(String[] args)
- Remove duplicate prompt in lesson ID selection
- Add input validation for day selection (was silently defaulting to Sunday)
- Make findBooking() private to enforce Facade pattern
- Add defensive copy to getMembers()

JUnit tests:
- Update review tests to use attendLesson()
- Add 4d: cannot attend same lesson twice
- Add BookingStatus assertion to attendance test
- Update income test to attend bookings before asserting income